# podest

./: INSTALL.md  README.md  pyproject.toml
Rpodest/: first_stab.R
doc/: DEPLOY.md  INSTALL.md  TEST.md
podest/: __init__.py  main.py
tests/: test_1_zscore_normalize.py  test_2_mean_point_density.py  test_3_two_scenario_mpd_comparison.py  test_4_two_scenario_pvalue.py  test_5_two_scenario_pvalue_auto.py  test_6_rng_compatibility_validator.py  test_main.py
